fix: huntbugs on PgDatabaseMetaData, String concatenation in a loop (#693)